option('enable-libnm-gtk', type: 'boolean', value: true, description: 'build legacy library libnm-gtk which depends on libnm-glib/libnm-util/dbus-glib')
option('enable-appindicator', type: 'boolean', value: false, description: 'Build with libappindicator support instead of xembed systray support.')
option('enable-wwan', type: 'boolean', value: true, description: 'Enable WWAN support.')
option('enable-selinux', type: 'boolean', value: true, description: 'Enable support for adjusting SELinux labels in configuration editor.')
option('enable-team', type: 'boolean', value: true, description: 'Enable team configuration editor.')
option('enable-gcr', type: 'boolean', value: true, description: 'Enable advanced certificate chooser.')
option('with-more-asserts', type: 'string', value: '0', description: 'Enable more assertions for debugging.')
option('enable-iso-codes', type: 'boolean', value: true, description: 'check for iso-codes at build-time')
option('enable-ld-gc', type: 'boolean', value: true, description: 'Enable garbage collection of unused symbols on linking')
option('enable-gtk-doc', type: 'boolean', value: true, description: 'use gtk-doc to build documentation')
option('enable-introspection', type: 'boolean', value: true, description: 'Enable introspection for this build')
